LAB 7 Update